--- a/wp-content/themes/dobras/style.css
+++ b/wp-content/themes/dobras/style.css
@@ -23,9 +23,10 @@ body, html {
     font-weight: 600;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     height: 100%;
+
 }
 
 .container {
@@ -35,8 +36,6 @@ body, html {
 
 footer {
     margin-top: auto;
-    height: 550px;
-    display: flex;
 }
 
 h1 {
