--- a/wp-content/themes/dobras/css/footer.css
+++ b/wp-content/themes/dobras/css/footer.css
@@ -7,6 +7,12 @@ footer {
     flex-direction: column;
 }
 
+footer img {
+    width: auto;
+    max-width: 100%;
+    height: 100%;
+}
+
 .rights-reserved {
     text-align: center;
     background: #F1F1F1;
@@ -54,7 +60,11 @@ footer {
     width: 100%;
 }
 
-.footer-main h1 {
+.footer-main h2 {
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 59px;
+    text-transform: uppercase;
     color: #D72E6D;
     padding-bottom: 20%;
 }
